# originshot

./: .env.example  .gitignore  LICENSE  README.md  render.yaml
.github/workflows/: auditor.yml  keep-warm.yml
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  admin.py  auditor.py  auth.py  batches.py  catalog_intel.py  config.py  credits.py  embeddings.py  events.py  fetch.py  firebase.py  generation.py  health.py  main.py  models.py  pricing.py  queue.py  repo.py  security.py  signing.py  storage.py  transparency.py  util.py  witness.py  worker.py
backend/app/api/: __init__.py  admin.py  analytics.py  badge.py  batches.py  brand_kit.py  catalog.py  check.py  compliance.py  credits.py  export.py  generate.py  ledger.py  library.py  listing.py  resolve.py  skus.py  uploads.py  users.py  verify.py
backend/listsnap_pipelines/: __init__.py  onmodel.py  registry.py  storage.py  studio.py
backend/originshot_pipelines/: __init__.py  certificate.py  compliance.py  lifestyle.py  listing.py  onmodel.py  perceptual.py  presets.py  provenance.py  providers.py  qa.py  registry.py  replay.py  resolve.py  storage.py  studio.py  transparency.py  variants.py  video.py  voiceover.py
backend/tests/: conftest.py  test_admin.py  test_auditor.py  test_badge.py  test_batches.py  test_billable_cost.py  test_brand_kit.py  test_catalog.py  test_certificate.py  test_check.py  test_compliance.py  test_credits.py  test_flow.py  test_generation.py  test_generation_gating.py  test_health.py  test_job_steps.py  test_job_stream.py  test_library.py  test_listing.py  test_object_lock.py  test_perceptual.py  test_pipelines.py  test_providers.py  test_qa.py  test_qa_feedback.py  test_replay.py  test_resolve.py  test_sdk_integration.py  test_sdk_integration_openai.py  test_security.py  test_signing.py  test_sku_mutations.py  test_transparency.py  test_users.py  test_verify_in_the_wild.py  test_verify_upload.py  test_voiceover.py  test_witness.py
docs/: ARCHITECTURE.drawio  B2_DATA_ORCHESTRATION.drawio  BENCHMARKS.md  BUILD_PLAN.md  DESIGN_SYSTEM.md  PROJECT_DESCRIPTION.md  SECURITY.md
docs/genblaze-issues/: 01-validate-model-inverted.md  02-webp-embed-reencodes.md  03-v050-publishes-as-0430.md  04-gmi-audio-modality-unreachable.md  05-openai-output-file-url-breaks-on-windows.md  06-openai-edit-https-source-mimetype.md
frontend/: .env.local.example  .gitignore  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/app/about/: page.tsx
frontend/app/check/: page.tsx
frontend/app/how-it-works/: page.tsx
frontend/app/ledger/: page.tsx
frontend/app/pack/: page.tsx
frontend/app/resolve/: page.tsx
frontend/app/signin/: page.tsx
frontend/app/style-guide/: page.tsx
frontend/app/verify/: page.tsx
frontend/components/: account-panel.tsx  adaptive-chrome.tsx  app-shell.tsx  auth-provider.tsx  badge-embed.tsx  brand-mark.tsx  credits-card.tsx  credits-pill.tsx  empty-state.tsx  image-tile.tsx  lightbox.tsx  marketplace-picker.tsx  page-header.tsx  provenance-badge.tsx  provider-chart.tsx  public-header.tsx  resolve-panel.tsx  site-footer.tsx  sku-card.tsx  stat-card.tsx  style-picker.tsx  tamper-demo.tsx  theme-toggle.tsx  upload-dropzone.tsx  verify-panel.tsx
frontend/components/admin/: health-panel.tsx  jobs-feed.tsx  ledger-feed.tsx  provider-budget-panel.tsx  storage-panel.tsx  users-table.tsx
frontend/components/how-it-works/: faq.tsx  run-ledger.tsx
frontend/components/landing/: closing-cta.tsx  evidence.tsx  hero.tsx  landing-footer.tsx  landing-header.tsx  light-table.tsx  pack-gallery.tsx  run-sequence.tsx  section.tsx  stack.tsx
frontend/components/ledger/: audit-strip.tsx  chain-entries.tsx  chain-head.tsx  verify-yourself.tsx
frontend/components/marketing/: contact-sheet.tsx  cta-band.tsx  feature-grid.tsx  hero.tsx  how-it-works.tsx  marketing-header.tsx  pack-showcase.tsx  page-hero.tsx  pipeline-flow.tsx  pipeline.tsx  provenance-spotlight.tsx  section.tsx  step-flow.tsx  trust-strip.tsx  why-originshot.tsx
frontend/components/motion/: count-up.tsx  fade-in.tsx  stagger.tsx
frontend/components/pack/: pack-sheet.tsx
frontend/components/studio/: asset-workbench.tsx  catalog-board.tsx  compliance-panel.tsx  developing-grid.tsx  generate-panel.tsx  job-progress.tsx  lineage-graph.tsx  listing-panel.tsx  orchestration-trace.tsx  sku-settings.tsx
frontend/lib/: api.ts  auth-errors.ts  demo-assets.ts  firebase.ts  pack.ts  stream-job.ts  types.ts  use-api.ts  use-session.tsx  utils.ts
frontend/scripts/: validate-contrast.js
infra/: Dockerfile.backend  docker-compose.yml  firestore.rules  render.yaml
scripts/: fix-duplicate-signup-grants.py  seed-demo-account.py  sync-demo-assets.py  verify_ledger.py
(+34 files in other folders)
