[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "listsnap-backend"
version = "0.1.0"
description = "ListSnap backend — FastAPI + Genblaze + Backblaze B2 + Firebase"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "pillow>=10.3",
    "boto3>=1.34",
    "httpx>=0.27",
]

[project.optional-dependencies]
firebase = ["firebase-admin>=6.5"]
worker = ["arq>=0.26", "redis>=5.0"]
analytics = ["duckdb>=1.0", "pandas>=2.2", "pyarrow>=16.0"]
# Genblaze SDK + the providers we use. GMI Cloud is primary (image edit + image→video);
# google/luma ship as fallback providers. `genblaze[parquet]` (pyarrow) powers ParquetSink
# analytics — also covered by the `analytics` extra above.
genblaze = ["genblaze[gmicloud,video,parquet]>=0.4,<0.5"]

[tool.poetry]
packages = [
    { include = "app" },
    { include = "listsnap_pipelines" },
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2"
pytest-asyncio = ">=0.23"
httpx = ">=0.27"
ruff = ">=0.4"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
