[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "originshot-backend"
version = "0.1.0"
description = "OriginShot backend — FastAPI + Genblaze + Backblaze B2 + Firebase"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "pillow>=10.3",
    "boto3>=1.34",
    "httpx>=0.27",
    "fpdf2>=2.7",
    "qrcode[pil]>=7.4",
    # OpenTimestamps: anchors each transparency checkpoint's hash into the Bitcoin blockchain,
    # an external witness the operator does not control (unlike Object Lock or our signing key).
    # Pulls python-bitcoinlib + pycryptodomex. Best-effort at runtime — see app/witness.py.
    "opentimestamps>=0.4.5",
]

[project.optional-dependencies]
firebase = ["firebase-admin>=6.5"]
worker = ["arq>=0.26", "redis>=5.0"]
analytics = ["duckdb>=1.0", "pandas>=2.2", "pyarrow>=16.0"]
# Genblaze SDK + the providers we use. GMI Cloud is primary (image edit + image→video); the
# `openai` extra pulls genblaze-openai for the second image-edit provider that serves via the
# cross-provider fallback when GMI is out of credit (originshot_pipelines/providers.py).
# `genblaze[parquet]` (pyarrow) powers ParquetSink analytics — also covered by `analytics`.
#
# ⚠️ `openai` is LOAD-BEARING, not optional: with GMI's request queue at 402, it is the only
# working image provider, so omitting it makes generation fail in production with
# "No module named 'genblaze_openai'" even though it works in a dev venv that pip-installed it.
#
# Floor is 0.4.3 — the umbrella release carrying the GitHub "v0.5.0" changes (streaming
# concurrency-safety, manifest schema_version validation, ReDoS/SSRF hardening, ParquetSink
# partition index). The umbrella version only bumps its dependency floors, so `>=0.4` would
# happily resolve 0.4.0 with the OLD genblaze-core/gmicloud pinned underneath and none of
# those fixes would reach production. NOTE: the GitHub release is tagged v0.5.0 but PyPI
# publishes it as 0.4.3 — `genblaze==0.5.0` does not exist. Verified 2026-07-19.
# `mutagen` gives genblaze-core's Mp3Handler the ability to embed the provenance manifest into
# the narration MP3 (ID3) for the voiceover style (originshot_pipelines/voiceover.py). Without
# it the embed degrades to a sidecar manifest (still ledger-anchored), so it is grouped here
# with the generation deps rather than made a hard requirement.
# `imageio-ffmpeg` bundles a static ffmpeg binary cross-platform, used to mux the narration onto
# the hero video (the narrated, content-bound MP4). Bundling it means the mux works on Render
# without apt-installing ffmpeg; if it (and a system ffmpeg) are absent, the mux is skipped and
# the standalone narration audio still ships.
genblaze = [
    "genblaze[gmicloud,openai,video,parquet]>=0.4.3,<0.5",
    "mutagen>=1.47",
    "imageio-ffmpeg>=0.5",
]

[tool.poetry]
packages = [
    { include = "app" },
    { include = "originshot_pipelines" },
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2"
pytest-asyncio = ">=0.23"
httpx = ">=0.27"
ruff = ">=0.4"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
